--- a/aa12-rpt11/cds_dht22/package.json
+++ b/aa12-rpt11/cds_dht22/package.json
@@ -15,6 +15,8 @@
   "author": "aa12",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mongoose": "^6.7.1",
     "serialport": "^9.2.4",
     "socket.io": "^2.4.1"
